--- a/crisis-intervention-angular-proj/angular.json
+++ b/crisis-intervention-angular-proj/angular.json
@@ -26,7 +26,7 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
-              "src/.htaccess"
+              "src/404.html"
             ],
             "styles": [
               "src/styles.scss"
